# DrPoliSci

./: .gitignore  .gitigore  README.md  config.yaml  pyproject.toml
notebooks/: 00_convert_and_chunk_coi.py  01_create_vdb.py  02_rag_chat.py  03_create_test_set.py  03_rag_chat_streamlit.py
notebooks/archive/: use_opik.py
src/testset_utils/: 04_test_rag.py  evaluation.py  testset_prompts.py
src/utils/: chat_with_agent.py  chatbot.py  config_types.py  global_helpers.py  prompts.py  rag_memory.py  rag_tools.py
src/utils/app/: chat_ui.py  watch_idle_sessions.py
src/utils/archive/: keep_chat_history.py  rag.py
