[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "chatbot"
version = "0.0.1"
description = "RAG chatbot for academic advising"
authors = [
  { name = "speters9" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"


[tool.ruff]
line-length = 99
src = ["chatbot"]
include = ["pyproject.toml", "chatbot/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["chatbot"]
force-sort-within-sections = true

